# 2024S-KG

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml  graph-embeddings.ipynb  knowledge-graph-construction.ipynb
book-recommendations/: LICENSE.txt  README.md  pyproject.toml
book-recommendations/src/book_recommendations/: app.py  run_app.py
book-recommendations/src/book_recommendations/utils/: db.py  metrics.py  query.py  ui.py
book-recommendations/src/book_recommendations/views/: recommendations.py  view_database.py
data/: book_tags_reduced.csv  books_enriched.csv  tags_reduced.csv
data/cypher-scripts/: data-importer.cypher  split-authors.cypher  split-genres.cypher
